[gd_scene load_steps=5 format=3 uid="uid://clti0i3ncur18"]

[ext_resource type="Script" path="res://scripts/team_battle_ui.gd" id="1_kgyjw"]
[ext_resource type="PackedScene" uid="uid://bunkym72rkj5n" path="res://scenes/health_bar.tscn" id="1_khmv2"]
[ext_resource type="PackedScene" uid="uid://b2btbywcldl2v" path="res://scenes/swap_icon.tscn" id="3_dy216"]
[ext_resource type="PackedScene" uid="uid://bj2gr6os2iakj" path="res://scripts/backup_icon.tscn" id="4_4h1yp"]

[node name="p_team_battle_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1120.0
offset_bottom = -830.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kgyjw")

[node name="health_bar" parent="." instance=ExtResource("1_khmv2")]
layout_mode = 0
value = 50.0

[node name="backup_icon" parent="." instance=ExtResource("4_4h1yp")]
layout_mode = 0
offset_left = 650.0
offset_right = 1650.0

[node name="swap_icon1" parent="." instance=ExtResource("3_dy216")]
layout_mode = 0
offset_top = 125.0
offset_bottom = 1125.0

[node name="swap_icon2" parent="." instance=ExtResource("3_dy216")]
layout_mode = 0
offset_left = 150.0
offset_top = 125.0
offset_right = 1150.0
offset_bottom = 1125.0

[node name="swap_icon3" parent="." instance=ExtResource("3_dy216")]
layout_mode = 0
offset_left = 300.0
offset_top = 125.0
offset_right = 1300.0
offset_bottom = 1125.0
